update authentication with firebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="sinopsis">Synopsis</string>
     <string name="season">Season</string>
     <string name="title_activity_movie_detail">Movie Detail</string>
+    <string name="app_id" translatable="false">284626842090</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
         "A material metaphor is the unifying theory of a rationalized space and a system of motion."
@@ -40,4 +41,27 @@
     <string name="nav_header_desc">Navigation header</string>
 
     <string name="title_activity_favorite">FavoriteActivity</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="invalid_format_email">Format email tidak valid</string>
+    <string name="empty_email_error">Email tidak boleh kosong</string>
+    <string name="sign_in">Sign in to your \nAccount</string>
+    <string name="sign_in_description">Enter your email and password to log in </string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="forgot_password">Forgot Password ?</string>
+    <string name="sign_up">Sign up</string>
+    <string name="sign_up_description">Create an account to continue!</string>
+    <string name="login">Log In</string>
+    <string name="or">Or</string>
+    <string name="doesnt_have_account">Don’t have an account?</string>
+    <string name="google_login">Continue with Google</string>
+
+    <string name="register">Register</string>
+    <string name="already_have_account">Already have an account?</string>
+    <string name="back_button">Back Button</string>
+
+    <string name="full_name">Full Name</string>
+    <string name="set_password">Set Password</string>
 </resources>
