--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,8 +41,6 @@
     <string name="nav_header_desc">Navigation header</string>
 
     <string name="title_activity_favorite">FavoriteActivity</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 
     <string name="invalid_format_email">Format email tidak valid</string>
     <string name="empty_email_error">Email tidak boleh kosong</string>
@@ -64,4 +62,5 @@
 
     <string name="full_name">Full Name</string>
     <string name="set_password">Set Password</string>
+    <string name="logout">Logout</string>
 </resources>
